create fans
