# src/controllers/user.controller.js
@@ -32,11 +32,30 @@ const getAllUsers = async (req, res) => {
 
 const getUserByUsername = async (req, res) => {
     try {
-        const user = await User.findOne({user: req.params.username}).select('-pass')
+        const user = await User.findOne({user: req.params.username}).select('-pass').populate('fans')
 
         if (!user) return res.status(404).json({ok: false, msg: 'usuario no encontrado'})
 
-        res.status(200).json({ok: true, data: user})
+        return res.status(200).json({ok: true, data: user})
+    } catch (error) {
+        console.log(error)
+        return res.status(500).json(error)
+    }
+}
+
+const addFans = async (req, res) => {
+    try {
+        let user = await User.findOne({user: req.params.username})
+
+        if (!user) return res.status(404).json({ok: false, msg: 'usuario no encontrado'})
+
+        if (user.fans.find(x => x == req.user._id)) res.status(400).json({ok: false, msg: 'ya eres fans de este usuario'})
+
+        let fans = [...user.fans, req.user._id]
+
+        user = await User.findOneAndUpdate({user: req.params.username}, {fans}, { new: true })
+
+        return res.status(200).json({ok: true, data: user})
     } catch (error) {
         console.log(error)
         return res.status(500).json(error)
@@ -47,5 +66,6 @@ module.exports = {
     getCurrentUser,
     updateUser,
     getAllUsers,
-    getUserByUsername
+    getUserByUsername,
+    addFans
 }
